--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Led</name>
+	<name>ANC</name>
 	<comment></comment>
 	<projects>
 		<project>drivers_c674x_c6748</project>
