Exclude blink.c from build

--- a/.cproject
+++ b/.cproject
@@ -76,6 +76,9 @@
 							<tool id="com.ti.ccstudio.buildDefinitions.C6000_8.1.hex.2021757676" name="C6000 Hex Utility" superClass="com.ti.ccstudio.buildDefinitions.C6000_8.1.hex"/>
 						</toolChain>
 					</folderInfo>
+					<sourceEntries>
+						<entry excluding="sw/blink.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings">
